--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 # 应用基础公共路径
 VITE_BASE_URL=/
 # 应用名称
-VITE_APP_TITLE=
+VITE_APP_TITLE=vue-vite
+# 路由模式 hash | history | memory
+VITE_ROUTER_HISTORY_MODE=history
