--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "vue-vite",
   "private": true,
   "version": "0.0.0",
+  "packageManager": "pnpm@8.15.3",
   "type": "module",
   "scripts": {
     "dev": "vite --mode dev",
     "dev:prod": "vite --mode prod",
     "build": "vue-tsc && vite build --mode prod",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "postinstall": "simple-git-hooks",
+    "format": "prettier --write .",
+    "typecheck": "vue-tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
     "axios": "^1.6.8",
@@ -18,10 +24,29 @@
   "devDependencies": {
     "@types/node": "^20.11.30",
     "@types/qs": "^6.9.14",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "@vitejs/plugin-vue": "^5.0.4",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.23.0",
+    "lint-staged": "^15.2.2",
+    "prettier": "3.2.5",
+    "simple-git-hooks": "^2.11.0",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.5",
     "vite": "^5.1.6",
     "vue-tsc": "^1.8.27"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm typecheck && pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,vue}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,scss,css,html}": [
+      "prettier --write"
+    ]
   }
 }
