--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "typecheck": "vue-tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
+    "@unocss/reset": "^0.58.6",
     "axios": "^1.6.8",
-    "qs": "^6.12.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -26,13 +26,16 @@
     "@types/qs": "^6.9.14",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
+    "@unocss/eslint-config": "^0.58.6",
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "lint-staged": "^15.2.2",
     "prettier": "3.2.5",
+    "sass": "^1.72.0",
     "simple-git-hooks": "^2.11.0",
     "typescript": "^5.2.2",
+    "unocss": "^0.58.6",
     "unplugin-auto-import": "^0.17.5",
     "vite": "^5.1.6",
     "vue-tsc": "^1.8.27"
