chore: 解决了使用@apply出现警告的问题

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["Parens", "typecheck", "unocss", "unplugin"]
+  "cSpell.words": ["Parens", "typecheck", "unocss", "unplugin"],
+  "css.customData": [".vscode/unocss.json"]
 }
