--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "unocss": "^0.58.6",
     "unplugin-auto-import": "^0.17.5",
     "vite": "^5.1.6",
+    "vite-plugin-vue-devtools": "^7.0.20",
     "vue-tsc": "^1.8.27"
   },
   "simple-git-hooks": {
