build: 引入了图标自动安装插件

--- a/.env
+++ b/.env
@@ -1,6 +1,18 @@
 # 应用基础公共路径
 VITE_BASE_URL=/
+
 # 应用名称
 VITE_APP_TITLE=vue-vite
+
 # 路由模式 hash | history | memory
 VITE_ROUTER_HISTORY_MODE=history
+
+# 图标名称的前缀
+VITE_ICON_PREFIX=icon
+
+# 本地SVG图标组件的前缀必须包括 VITE_ICON_PREFIX
+# 格式{VITE_ICON_PREFIX}-{本地图标名称}
+VITE_ICON_LOCAL_PREFIX=local-icon
+
+# 是否启用网络代理 Y | N
+VITE_HTTP_PROXY=N
