--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "cSpell.words": ["Parens", "typecheck", "unocss", "unplugin"],
+  "cSpell.words": ["iconify", "Parens", "typecheck", "unocss", "unplugin", "vite", "vitejs"],
   "css.customData": [".vscode/unocss.json"],
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
