--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "typescript": "^5.2.2",
     "unocss": "^0.58.6",
     "unplugin-auto-import": "^0.17.5",
+    "unplugin-icons": "^0.18.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.6",
     "vite-plugin-vue-devtools": "^7.0.20",
     "vue-tsc": "^1.8.27"
