chore: 增加了vscode工作区的插件推荐

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,6 +14,12 @@
     "antfu.unocss",
     "sdras.vue-vscode-snippets",
     "christian-kohler.path-intellisense",
-    "naumovs.color-highlight"
+    "naumovs.color-highlight",
+    "mikestead.dotenv",
+    "antfu.goto-alias",
+    "editorconfig.editorconfig",
+    "antfu.iconify",
+    "Vue.volar",
+    "eamodio.gitlens"
   ]
 }
