--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.1.0",
   "packageManager": "pnpm@8.15.3",
+  "engines": {
+    "node": ">=18.19.0"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite --mode dev",
