fix: 修复了环境变量命名错误的问题

--- a/.env.prod
+++ b/.env.prod
@@ -2,6 +2,6 @@
 VITE_SERVICE_BASE_URL=
 
 # 其它后台服务基本地址(生产环境)
-VITE_APP_TITLE=`{
+VITE_OTHER_SERVICE_BASE_URL=`{
   "demo": "http://localhost:9528"
 }`
