--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20.12.2",
+    "@types/node": "^20.12.4",
     "@types/qs": "^6.9.14",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
@@ -36,14 +36,15 @@
     "eslint-plugin-vue": "^9.24.0",
     "lint-staged": "^15.2.2",
     "prettier": "3.2.5",
-    "sass": "^1.72.0",
+    "sass": "^1.74.1",
     "simple-git-hooks": "^2.11.1",
+    "tsx": "^4.7.1",
     "typescript": "^5.4.3",
     "unocss": "^0.58.9",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-icons": "^0.18.5",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.7",
+    "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vue-tsc": "^2.0.7"
   },
