chore: 调整了网络请求的相关配置

--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,9 @@
 # 后台服务基本地址(生产环境)
 VITE_SERVICE_BASE_URL=
 
+# 代理前缀
+VITE_APP_BASE_API =/api
+
 # 其它后台服务基本地址(生产环境)
 VITE_OTHER_SERVICE_BASE_URL=`{
   "demo": "http://localhost:9528"
