--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,8 @@
   "git-graph.dialog.fetchRemote.prune": true,
   "path-intellisense.mappings": {
     "@": "${workspaceRoot}/src"
+  },
+  "search.exclude": {
+    "**/dist": true
   }
 }
